# rpi-mmal-demo

./: CMakeLists.txt  buffer_demo.cpp  main.cpp  opencv_demo.cpp  video_record.cpp
